; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_rc2.c_rc2_ecb_encrypt.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_rc2.c_rc2_ecb_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rc2_ecb_encrypt(i8* %0, i8* %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %6, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %7, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 7
  %18 = load i8, i8* %17, align 1
  %19 = zext i8 %18 to i32
  %20 = shl i32 %19, 8
  %21 = load i8*, i8** %4, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 6
  %23 = load i8, i8* %22, align 1
  %24 = zext i8 %23 to i32
  %25 = add i32 %20, %24
  store i32 %25, i32* %8, align 4
  %26 = load i8*, i8** %4, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 5
  %28 = load i8, i8* %27, align 1
  %29 = zext i8 %28 to i32
  %30 = shl i32 %29, 8
  %31 = load i8*, i8** %4, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 4
  %33 = load i8, i8* %32, align 1
  %34 = zext i8 %33 to i32
  %35 = add i32 %30, %34
  store i32 %35, i32* %9, align 4
  %36 = load i8*, i8** %4, align 8
  %37 = getelementptr inbounds i8, i8* %36, i64 3
  %38 = load i8, i8* %37, align 1
  %39 = zext i8 %38 to i32
  %40 = shl i32 %39, 8
  %41 = load i8*, i8** %4, align 8
  %42 = getelementptr inbounds i8, i8* %41, i64 2
  %43 = load i8, i8* %42, align 1
  %44 = zext i8 %43 to i32
  %45 = add i32 %40, %44
  store i32 %45, i32* %10, align 4
  %46 = load i8*, i8** %4, align 8
  %47 = getelementptr inbounds i8, i8* %46, i64 1
  %48 = load i8, i8* %47, align 1
  %49 = zext i8 %48 to i32
  %50 = shl i32 %49, 8
  %51 = load i8*, i8** %4, align 8
  %52 = getelementptr inbounds i8, i8* %51, i64 0
  %53 = load i8, i8* %52, align 1
  %54 = zext i8 %53 to i32
  %55 = add i32 %50, %54
  store i32 %55, i32* %11, align 4
  store i32 0, i32* %12, align 4
  br label %56

56:                                               ; preds = %199, %3
  %57 = load i32, i32* %12, align 4
  %58 = icmp ult i32 %57, 16
  br i1 %58, label %59, label %202

59:                                               ; preds = %56
  %60 = load i32, i32* %11, align 4
  %61 = load i32, i32* %10, align 4
  %62 = load i32, i32* %8, align 4
  %63 = xor i32 %62, -1
  %64 = and i32 %61, %63
  %65 = add i32 %60, %64
  %66 = load i32, i32* %9, align 4
  %67 = load i32, i32* %8, align 4
  %68 = and i32 %66, %67
  %69 = add i32 %65, %68
  %70 = load i32*, i32** %7, align 8
  %71 = load i32, i32* %12, align 4
  %72 = mul i32 4, %71
  %73 = add i32 %72, 0
  %74 = zext i32 %73 to i64
  %75 = getelementptr inbounds i32, i32* %70, i64 %74
  %76 = load i32, i32* %75, align 4
  %77 = add i32 %69, %76
  %78 = and i32 %77, 65535
  store i32 %78, i32* %11, align 4
  %79 = load i32, i32* %11, align 4
  %80 = shl i32 %79, 1
  %81 = load i32, i32* %11, align 4
  %82 = lshr i32 %81, 15
  %83 = or i32 %80, %82
  store i32 %83, i32* %11, align 4
  %84 = load i32, i32* %10, align 4
  %85 = load i32, i32* %9, align 4
  %86 = load i32, i32* %11, align 4
  %87 = xor i32 %86, -1
  %88 = and i32 %85, %87
  %89 = add i32 %84, %88
  %90 = load i32, i32* %8, align 4
  %91 = load i32, i32* %11, align 4
  %92 = and i32 %90, %91
  %93 = add i32 %89, %92
  %94 = load i32*, i32** %7, align 8
  %95 = load i32, i32* %12, align 4
  %96 = mul i32 4, %95
  %97 = add i32 %96, 1
  %98 = zext i32 %97 to i64
  %99 = getelementptr inbounds i32, i32* %94, i64 %98
  %100 = load i32, i32* %99, align 4
  %101 = add i32 %93, %100
  %102 = and i32 %101, 65535
  store i32 %102, i32* %10, align 4
  %103 = load i32, i32* %10, align 4
  %104 = shl i32 %103, 2
  %105 = load i32, i32* %10, align 4
  %106 = lshr i32 %105, 14
  %107 = or i32 %104, %106
  store i32 %107, i32* %10, align 4
  %108 = load i32, i32* %9, align 4
  %109 = load i32, i32* %8, align 4
  %110 = load i32, i32* %10, align 4
  %111 = xor i32 %110, -1
  %112 = and i32 %109, %111
  %113 = add i32 %108, %112
  %114 = load i32, i32* %11, align 4
  %115 = load i32, i32* %10, align 4
  %116 = and i32 %114, %115
  %117 = add i32 %113, %116
  %118 = load i32*, i32** %7, align 8
  %119 = load i32, i32* %12, align 4
  %120 = mul i32 4, %119
  %121 = add i32 %120, 2
  %122 = zext i32 %121 to i64
  %123 = getelementptr inbounds i32, i32* %118, i64 %122
  %124 = load i32, i32* %123, align 4
  %125 = add i32 %117, %124
  %126 = and i32 %125, 65535
  store i32 %126, i32* %9, align 4
  %127 = load i32, i32* %9, align 4
  %128 = shl i32 %127, 3
  %129 = load i32, i32* %9, align 4
  %130 = lshr i32 %129, 13
  %131 = or i32 %128, %130
  store i32 %131, i32* %9, align 4
  %132 = load i32, i32* %8, align 4
  %133 = load i32, i32* %11, align 4
  %134 = load i32, i32* %9, align 4
  %135 = xor i32 %134, -1
  %136 = and i32 %133, %135
  %137 = add i32 %132, %136
  %138 = load i32, i32* %10, align 4
  %139 = load i32, i32* %9, align 4
  %140 = and i32 %138, %139
  %141 = add i32 %137, %140
  %142 = load i32*, i32** %7, align 8
  %143 = load i32, i32* %12, align 4
  %144 = mul i32 4, %143
  %145 = add i32 %144, 3
  %146 = zext i32 %145 to i64
  %147 = getelementptr inbounds i32, i32* %142, i64 %146
  %148 = load i32, i32* %147, align 4
  %149 = add i32 %141, %148
  %150 = and i32 %149, 65535
  store i32 %150, i32* %8, align 4
  %151 = load i32, i32* %8, align 4
  %152 = shl i32 %151, 5
  %153 = load i32, i32* %8, align 4
  %154 = lshr i32 %153, 11
  %155 = or i32 %152, %154
  store i32 %155, i32* %8, align 4
  %156 = load i32, i32* %12, align 4
  %157 = icmp eq i32 %156, 4
  br i1 %157, label %161, label %158

158:                                              ; preds = %59
  %159 = load i32, i32* %12, align 4
  %160 = icmp eq i32 %159, 10
  br i1 %160, label %161, label %198

161:                                              ; preds = %158, %59
  %162 = load i32, i32* %11, align 4
  %163 = load i32*, i32** %7, align 8
  %164 = load i32, i32* %8, align 4
  %165 = and i32 %164, 63
  %166 = zext i32 %165 to i64
  %167 = getelementptr inbounds i32, i32* %163, i64 %166
  %168 = load i32, i32* %167, align 4
  %169 = add i32 %162, %168
  %170 = and i32 %169, 65535
  store i32 %170, i32* %11, align 4
  %171 = load i32, i32* %10, align 4
  %172 = load i32*, i32** %7, align 8
  %173 = load i32, i32* %11, align 4
  %174 = and i32 %173, 63
  %175 = zext i32 %174 to i64
  %176 = getelementptr inbounds i32, i32* %172, i64 %175
  %177 = load i32, i32* %176, align 4
  %178 = add i32 %171, %177
  %179 = and i32 %178, 65535
  store i32 %179, i32* %10, align 4
  %180 = load i32, i32* %9, align 4
  %181 = load i32*, i32** %7, align 8
  %182 = load i32, i32* %10, align 4
  %183 = and i32 %182, 63
  %184 = zext i32 %183 to i64
  %185 = getelementptr inbounds i32, i32* %181, i64 %184
  %186 = load i32, i32* %185, align 4
  %187 = add i32 %180, %186
  %188 = and i32 %187, 65535
  store i32 %188, i32* %9, align 4
  %189 = load i32, i32* %8, align 4
  %190 = load i32*, i32** %7, align 8
  %191 = load i32, i32* %9, align 4
  %192 = and i32 %191, 63
  %193 = zext i32 %192 to i64
  %194 = getelementptr inbounds i32, i32* %190, i64 %193
  %195 = load i32, i32* %194, align 4
  %196 = add i32 %189, %195
  %197 = and i32 %196, 65535
  store i32 %197, i32* %8, align 4
  br label %198

198:                                              ; preds = %161, %158
  br label %199

199:                                              ; preds = %198
  %200 = load i32, i32* %12, align 4
  %201 = add i32 %200, 1
  store i32 %201, i32* %12, align 4
  br label %56

202:                                              ; preds = %56
  %203 = load i32, i32* %11, align 4
  %204 = trunc i32 %203 to i8
  %205 = load i8*, i8** %5, align 8
  %206 = getelementptr inbounds i8, i8* %205, i64 0
  store i8 %204, i8* %206, align 1
  %207 = load i32, i32* %11, align 4
  %208 = lshr i32 %207, 8
  %209 = trunc i32 %208 to i8
  %210 = load i8*, i8** %5, align 8
  %211 = getelementptr inbounds i8, i8* %210, i64 1
  store i8 %209, i8* %211, align 1
  %212 = load i32, i32* %10, align 4
  %213 = trunc i32 %212 to i8
  %214 = load i8*, i8** %5, align 8
  %215 = getelementptr inbounds i8, i8* %214, i64 2
  store i8 %213, i8* %215, align 1
  %216 = load i32, i32* %10, align 4
  %217 = lshr i32 %216, 8
  %218 = trunc i32 %217 to i8
  %219 = load i8*, i8** %5, align 8
  %220 = getelementptr inbounds i8, i8* %219, i64 3
  store i8 %218, i8* %220, align 1
  %221 = load i32, i32* %9, align 4
  %222 = trunc i32 %221 to i8
  %223 = load i8*, i8** %5, align 8
  %224 = getelementptr inbounds i8, i8* %223, i64 4
  store i8 %222, i8* %224, align 1
  %225 = load i32, i32* %9, align 4
  %226 = lshr i32 %225, 8
  %227 = trunc i32 %226 to i8
  %228 = load i8*, i8** %5, align 8
  %229 = getelementptr inbounds i8, i8* %228, i64 5
  store i8 %227, i8* %229, align 1
  %230 = load i32, i32* %8, align 4
  %231 = trunc i32 %230 to i8
  %232 = load i8*, i8** %5, align 8
  %233 = getelementptr inbounds i8, i8* %232, i64 6
  store i8 %231, i8* %233, align 1
  %234 = load i32, i32* %8, align 4
  %235 = lshr i32 %234, 8
  %236 = trunc i32 %235 to i8
  %237 = load i8*, i8** %5, align 8
  %238 = getelementptr inbounds i8, i8* %237, i64 7
  store i8 %236, i8* %238, align 1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
